<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_randomimage_title">

        <SwitchPreferenceCompat
            android:key="@string/preference_randomimage_key"
            android:title="@string/preference_randomimage_title"
            android:summary="@string/preference_randomimage_summary_on"
            android:defaultValue="true" />

        <Preference
            android:key="@string/preference_about_key"
            android:title="@string/preference_about_title"
            android:summary="@string/preference_about_summary"/>



    <!--    <de.slgaachen.firstlittleapp.NumberPickerPreference
            android:key="@string/preference_quotecount_key"
            android:title="@string/preference_quotecount_title"
            android:defaultValue="10" />-->
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>