<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDivider">

    <androidx.appcompat.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_listview"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/randomNameNumber_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/hintNumber_text"
            android:textAlignment="center"
            android:ems="2"
            android:inputType="number" />

        <EditText
            android:id="@+id/randomName_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textPersonName"
            android:hint="@string/name_text"
            android:layout_margin="@dimen/default_margin"
            android:textSize="@dimen/default_font_size"/>

        <Button
            android:id="@+id/button_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/default_font_size"
            android:text="@string/shuffle_button"
            android:onClick="createRandomNameList"
            android:layout_gravity="right"/>


    </LinearLayout>


    <Button
        android:id="@+id/goBackActivity_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/zurueckActivity_button"
        android:onClick="changeActivityMainActivity"/>

    <ListView
        android:id="@+id/listview_activity_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:divider="@color/colorDivider"
        android:dividerHeight="@dimen/default_margin" />


</LinearLayout>